target/release/build/crossbeam-utils-6002e9229d14f8e7/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
   1 |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /nix/store/4ralwbjlvr92a66sz12v0la004fzzid8-rust-default-1.90.0/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:3718:1
     |
3718 | / atomic_int! {
3719 | |     cfg(target_has_atomic = "16"),
3720 | |     cfg(target_has_atomic_equal_alignment = "16"),
3721 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
3734 | |     u16 AtomicU16
3735 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
